fixed the weapon adapter

--- a/app/src/main/res/layout/content_gurps_navigator.xml
+++ b/app/src/main/res/layout/content_gurps_navigator.xml
@@ -57,7 +57,8 @@
         android:layout_below="@id/monster"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:textSize="40sp" />
+        android:textSize="40sp"
+        android:onClick="navigateLoot"/>
 
     <!-- Dungeons -->
     <Button
