--- a/app/src/main/res/layout/weaponlistitem.xml
+++ b/app/src/main/res/layout/weaponlistitem.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent" android:layout_height="match_parent">
 
     <!-- This will be each individual row on the weapon list column -->
 
@@ -31,4 +30,4 @@
         android:layout_centerVertical="true"
         android:text="View" />
 
-</LinearLayout>
+</RelativeLayout>
