View button on character doesn't work

--- a/app/src/main/res/layout/content_gurps_navigator.xml
+++ b/app/src/main/res/layout/content_gurps_navigator.xml
@@ -24,9 +24,9 @@
         android:textAlignment="center"
         android:contextClickable="false" />
 
-    <!-- Character Sheet -->
+    <!-- Characters -->
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/character"
         android:id="@+id/character"
