--- a/app/src/main/res/layout/activity_characters.xml
+++ b/app/src/main/res/layout/activity_characters.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:background="#000000"
     tools:context="combobreaker.rpgassistant.Characters">
 
     <!-- Cool Header -->
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/characterHeader"
+        android:text="@string/character"
         android:textSize="30sp"
         android:textColor="#000000"
         android:textAlignment="center"
         android:id="@+id/characterheader"/>
 
     <!-- Button Wrapper -->
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/characterheader"
@@ -29,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/randomCharacter"
-            android:text="@string/blankCharacter"
+            android:text="@string/blankMonster"
             android:textSize="20sp"
             android:onClick="genrandmon"/>
 
@@ -51,7 +52,7 @@
             android:textSize="20sp"
             android:onClick="deleteall"/>
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <!-- List of characters -->
     <ListView
@@ -61,5 +62,4 @@
         android:id="@+id/realListOfcharacters">
 
     </ListView>
-
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
