--- a/app/src/main/res/layout/activity_characters.xml
+++ b/app/src/main/res/layout/activity_characters.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="#000000"
+    android:background="#FFFFFF"
     tools:context="combobreaker.rpgassistant.Characters">
 
     <!-- Cool Header -->
@@ -19,7 +19,7 @@
         android:id="@+id/characterheader"/>
 
     <!-- Button Wrapper -->
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/characterheader"
@@ -52,12 +52,14 @@
             android:textSize="20sp"
             android:onClick="clearCharacters"/>
 
-    </RelativeLayout>
+    </LinearLayout>
 
     <!-- List of characters -->
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
+        android:layout_marginLeft="10sp"
+        android:layout_marginRight="10sp"
         android:layout_below="@id/characterbuttonwrapper"
         android:id="@+id/realListOfcharacters">
 
